force-app/main/default/objects/DXAppLauncher__c/DXAppLauncher__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>DXAppLauncher</label>
</CustomObject>