force-app/main/default/objects/DXAppLauncher__c/fields/appIcon__c.field-meta.xml
<CustomField>
    <fullName>appIcon__c</fullName>
    <label>appIcon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>