force-app/main/default/objects/DXAppLauncher__c/fields/componentName__c.field-meta.xml
<CustomField>
    <fullName>componentName__c</fullName>
    <label>componentName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>